2006-03-31  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp.cc: get exit_code before AtExit, so it is not changed by
	  cmd:at-exit commands.
	* Http.cc: workaround some servers' problem with size>2G.

2006-03-30  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp_ssl.cc: make scheduler run after ssl handshake - this fixes
	  ftp upload hang when the file is empty.

2006-03-15  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc, resource.cc: add mirror:dereference setting,
	  --no-dereference, --perms options.

2006-03-15  Alexander V. Lukyanov <lav@yars.free.net>

	* FindJob.cc, FindJob.h: add PROCESSING state, so Chdir
	  is not called continuously.
	* LsCache.cc: use Path::Change instead of Chdir.

2006-03-13  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc: don't create target file if source does not exist.
	* Job.cc: don't delete killed job right not; CollectGarbage after
	  KillAll or Cleanup, don't delete the jobs in loop.
	* Job.h: make Kill and KillAll static; add Cleanup method.
	* commands.cc: show done jobs before exit.
	* lftp.cc: do Job::Cleanup before termination.
	* resource.cc: change http:use-propfind default to no.

2006-02-16  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h: Close session in Chdir, VerifyPath
	  (fixed coredump).
	* LsCache.cc: avoid Chdir, as it Closes session.
	* FileCopy.cc: use SMTask ref count.
	* SMTask.cc, SMTask.h: (ref_count) new member.
	* ftpclass.cc: remove unneeded abort().

2006-02-14  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: fixed condition when exact time is needed for cls.

2006-02-08  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: fixed a stupid bug with cls (time-style).
	* resource.cc: assign env TIME_STYLE to cmd:time-style.

2006-02-06  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSetOutput.cc, commands.cc: add cmd:time-style setting.

2006-01-23  Alexander V. Lukyanov <lav@yars.free.net>
